[package]
name = "titik"
version = "0.2.1"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
license = "MIT"
description = "A cross platform text ui widget"
repository = "https://github.com/ivanceras/titik"
documentation = "https://docs.rs/titik"
readme = "README.md"
keywords = ["text", "tui", "terminal", "widget"]
edition = "2018"

[dependencies]
crossterm = "0.16.0"
stretch = "0.3.2"
image = "0.23.0"
unicode-width = "0.1.7"
mt-dom = { version = "0.5", path = "../mt-dom" }
itertools = "0.9.0"
lazy_static = "1.4.0"
ito-canvas = { path = "../ito-canvas", version= "0.1.0"}


[patch.crates-io]
stretch = { path = "../stretch" }
ito-canvas = { path = "../ito-canvas" }
mt-dom = { path = "../mt-dom" }
