[package]
name = "titik"
version = "0.3.1"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
license = "MIT"
description = "A cross platform text ui widget"
repository = "https://github.com/ivanceras/titik"
documentation = "https://docs.rs/titik"
readme = "README.md"
keywords = ["text", "tui", "terminal", "widget"]
edition = "2018"

[dependencies]
crossterm = "0.16.0"
expanse = "0.3.3"
image = "0.23.0"
unicode-width = "0.1.7"
mt-dom = { version = "0.14"}
itertools = "0.9.0"
lazy_static = "1.4.0"
#ito-canvas = { version= "0.1"}
ito-canvas = { version= "0.1", path = "../ito-canvas"}


